Fix side bar context menu z-index

--- a/src/assets/styles/cmps/Sidebar.scss
+++ b/src/assets/styles/cmps/Sidebar.scss
@@ -305,7 +305,7 @@
 
 		box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
 		background-color: $clr3;
-		z-index: 40;
+		z-index: 50;
 
 		button {
 			display: flex;
